tests/instantiating/invalid/width_range_conflict_different_types/bus.fbd
type foo config
	width = 8

main bus
	bar foo
		range = [1, 2]
